# demo

./: .gitignore  .reviewdog.yml  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: default.md  fancy.md
.github/workflows/: lint.yml
__tests__/: test_main.py
demo/: main.py
