[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demo and stuff"
authors = ["Alex Clay <aclay@tetrascience.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
flake8 = "^4.0.1"
jedi = "^0.18.1"
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
